# libff

./: .gitmodules  CMakeLists.txt  flake.nix
depends/: CMakeLists.txt
libff/: CMakeLists.txt
libff/algebra/curves/bn128/: bn128_fields.cpp  bn128_fields.hpp  bn128_g1.cpp  bn128_g1.hpp  bn128_g2.cpp  bn128_g2.hpp  bn128_gt.cpp  bn128_gt.hpp  bn128_init.cpp  bn128_init.hpp  bn128_pairing.cpp  bn128_pairing.hpp  bn_utils.hpp  bn_utils.tcc
libff/algebra/curves/tests/: test_bilinearity.cpp
libff/common/tests/: test_common.cpp
